package com.tp.jpa.enums;

public enum Estado {
    PENDIENTE,
    CONFIRMADO,
    TERMINADO,
    CANCELADO
}
