package com.tp.jpa.enums;

public enum FormaPago {
    TARJETA,
    TRANSFERENCIA,
    EFECTIVO
}
