package com.tp.jpa.enums;

public enum Rol {
    ADMIN,
    USUARIO
}
