package com.tp.jpa.interfaces;

public interface Calculable {
    public void calcularTotal();
}
